--- a/templates/form.html
+++ b/templates/form.html
@@ -21,15 +21,17 @@
 
       <label for="type_dropdown">Type:</label>
       <select name = "type_dropdown" id="type_dropdown">
-        <option value="Individual">"Individual"</option>
-        <option value="Small Company">"Small Company"</option>
-        <option value="Medium Company">"Medium Company"</option>
-        <option value="Large Company">"Large Company"</option>
-        <option value="Research Lab">"Research Lab"</option>
-        <option value="University">"University"</option>
         <option value="Association">"Association"</option>
         <option value="Government Agency">"Government Agency"</option>
+        <option value="Health System">"Health System"</option>
+        <option value="Individual">"Individual"</option>
+        <option value="Large Company">"Large Company"</option>
+        <option value="Medium Company">"Medium Company"</option>
+        <option value="Research Lab">"Research Lab"</option>
+        <option value="Small Company">"Small Company"</option>
         <option value="Student">"Student"</option>
+        <option value="University">"University"</option>      
+        
       </select><br><br>
 
     
