alphabetized submarkets and fixed misspellings

--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,7 @@
 
   </head>
   <body>
-    <center><h1>Collaborative Community Member Tracker</h1></center>
+    <center><h1>Collaborative Pittsburgh Community Member Tracker</h1></center>
     <form method="post" action="/submit">
       <label for="firstname">First Name:</label>
       <input type="text" id="firstname" name="firstname"><br><br>
@@ -54,38 +54,8 @@
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="Robotics">
-          <label for="Robotics">Robotics</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Engineering">
-          <label for="Engineering">Engineering</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Medical Devices">
-          <label for="Medical Devices">Medical Devices</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Imaging">
-          <label for="Imaging">Imaging</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Health Admin">
-          <label for="Health Admin">Health Admin</label>
-          </div>
-
-          <div>
           <input type="checkbox" name="markets[]" value="BioInfo">
           <label for="BioInfo">BioInfo</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Pharmaceuticals">
-          <label for="Pharmaceuticals">Pharmaceuticals</label>
           </div>
 
           <div>
@@ -94,8 +64,8 @@
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="Neuroscience">
-          <label for="Neuroscience">Neuroscience</label>
+          <input type="checkbox" name="markets[]" value="Biotechnology">
+          <label for="Biotechnology">Biotechnology</label>
           </div>
 
           <div>
@@ -104,28 +74,44 @@
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="Biotechnology">
-          <label for="Biotechnology">Biotechnology</label>
-          </div>
-
-          <div>
-          <input type="checkbox" name="markets[]" value="Nutraceuticals">
-          <label for="Nutraceuticals">Nutraceuticals</label>
-          </div>
-
-          <div>
           <input type="checkbox" name="markets[]" value="Cosmeceuticals">
           <label for="Cosmeceuticals">Cosmeceuticals</label>
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="Venture Investing">
-          <label for="Venture Investing">Venture Investing</label>
+          <input type="checkbox" name="markets[]" value="CSD">
+          <label for="CSD">CSD</label>
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="Physical Therapy">
-          <label for="Physical Therapy">Physical Therapy</label>
+          <input type="checkbox" name="markets[]" value="Engineering">
+          <label for="Engineering">Engineering</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Health Admin">
+          <label for="Health Admin">Health Admin</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Imaging">
+          <label for="Imaging">Imaging</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Medical Devices">
+          <label for="Medical Devices">Medical Devices</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Neuroscience">
+          <label for="Neuroscience">Neuroscience</label>
+          </div>
+  
+        
+          <div>
+          <input type="checkbox" name="markets[]" value="Nutraceuticals">
+          <label for="Nutraceuticals">Nutraceuticals</label>
           </div>
 
           <div>
@@ -134,9 +120,25 @@
           </div>
 
           <div>
-          <input type="checkbox" name="markets[]" value="CSD">
-          <label for="CSD">CSD</label>
+          <input type="checkbox" name="markets[]" value="Pharmaceuticals">
+          <label for="Pharmaceuticals">Pharmaceuticals</label>
           </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Physical Therapy">
+          <label for="Physical Therapy">Physical Therapy</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Robotics">
+          <label for="Robotics">Robotics</label>
+          </div>
+
+          <div>
+          <input type="checkbox" name="markets[]" value="Venture Investing">
+          <label for="Venture Investing">Venture Investing</label>
+          </div>
+          
       </fieldset><br><br>
 
       <fieldset>
@@ -144,7 +146,7 @@
 
           <div>
           <input type="checkbox" name="stages[]" value="BSP1">
-          <label for="BSP1">BSP1</label>
+          <label for="Discovery">Discovery</label>
           </div>
 
           <div>
@@ -170,7 +172,7 @@
 
       </fieldset><br><br>
 
-      <label for="location_dropdown">Pittsburg Location:</label>
+      <label for="location_dropdown">Pittsburgh Location:</label>
         <select name="location_dropdown" id="location_dropdown">
           <option value="BSP1">BSP1</option>
           <option value="PTC">PTC</option>
