added collbre user field so that collab users can be linked to their submissions

--- a/templates/form.html
+++ b/templates/form.html
@@ -7,6 +7,11 @@
   <body>
     <center><h1>Collaborative Pittsburgh Community Member Tracker</h1></center>
     <form method="post" action="/submit">
+
+      <label for="collabreuser">CollabRE Email:</label>
+      <input type="text" id="collabreuser" name="collabreuser"><br><br>
+
+
       <label for="firstname">First Name:</label>
       <input type="text" id="firstname" name="firstname"><br><br>
 
